policy-ast: completesness tests