@@ -7,6 +7,9 @@ import uq.pac.rsvp.policy.ast.antlrschema.visitor.AntlrSchemaValueVisitor;
 import uq.pac.rsvp.policy.ast.antlrschema.visitor.AntlrSchemaVisitor;
 import uq.pac.rsvp.support.SourceLoc;
 
+import java.util.Collection;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.Set;
 
 public class AntlrRecordEntityType extends AntlrEntityType {
@@ -14,10 +17,10 @@ public class AntlrRecordEntityType extends AntlrEntityType {
     private final AntlrRecordType shape;
     private final Set<AntlrTypeReference> memberOf;
 
-    public AntlrRecordEntityType(AntlrTypeReference ref, Set<AntlrTypeReference> memberOf, AntlrRecordType shape, SourceLoc location) {
+    public AntlrRecordEntityType(AntlrTypeReference ref, Collection<AntlrTypeReference> memberOf, AntlrRecordType shape, SourceLoc location) {
         super(ref, location);
         this.shape = shape;
-        this.memberOf = Set.copyOf(memberOf);
+        this.memberOf = Collections.unmodifiableSet(new LinkedHashSet<>(memberOf));
     }
 
     public Set<AntlrTypeReference> getMemberOf() {
